--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="./assets/img/icono-azulclaro.png" type="image/x-icon">
 </head>
 
-<!-- Contenido -->
+<!-- Content -->
 <body>
     <main>
         <header>
@@ -30,12 +30,24 @@
                         <img src="/assets/img/icono-azulclaro.png" alt="logo">
                         <span><a href="#">Fidelización</a></span>
                     </div>
+                    <ul>
+                        <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-house"></i>
+                        </a>Inicio</li>
+                        <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-toolbox"></i>
+                        </a>Herramientas</li>
+                        <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-gift"></i></i>
+                        </a>Promociones</li>
+                        <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-chart-line"></i>
+                        </a>Calidad</li>
+                        <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-headset"></i></i>
+                        </a>Objetivos</li>
+                        <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-book"></i></i>
+                        </a>Información</li>
+                    </ul>
                 </div>
+            <!--Right content goes here-->
+            <div class="right-content"></div>
             </div>
-            <ul>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-house"></i></a>Home</li>
-            </ul>
-
         </header>
     </main>
 
