--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="main-container">
                 <div class="left-menu">
                     <div class="logo">
-                        <img src="/assets/img/icono-azulclaro.png" alt="logo">
+                        <img src="..." alt="logo">
                         <span><a href="#">Fidelización</a></span>
                     </div>
                     <ul>
