--- a/index.html
+++ b/index.html
@@ -50,11 +50,17 @@
         <!--Right content goes here-->
         <div class="right-content"></div>
         </div>
-        <div class="parallax img-uno" id="m">
-            <div class="texto-interior">
-                <h1 id="m">Fidelización y Retención</h1>
+        <div class="content">
+            <div class="title-hero">
+                <h1>Fidelización y Retención</h1>
             </div>
-        </div><!-- .parallax -->
+            <div class="text-hero">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur obcaecati ipsam nemo placeat, debitis quas tempore inventore nisi qui nostrum, impedit incidunt numquam necessitatibus quo ad officiis beatae doloribus tenetur.</p>
+            </div>
+        </div>
+
+        
+
     </main>
 
         
