--- a/index.html
+++ b/index.html
@@ -55,7 +55,27 @@
                 <h1>Fidelización y Retención</h1>
             </div>
             <div class="text-hero">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur obcaecati ipsam nemo placeat, debitis quas tempore inventore nisi qui nostrum, impedit incidunt numquam necessitatibus quo ad officiis beatae doloribus tenetur.</p>
+                <p>Bienvenidos al área de fidelización y retención, esta herramienta se creó para facilitarles el acceso a la información actualizada (novedades de productos, promociones, mejoras de calidad...) y a todas las herramientas que utilizaremos durante nuestra jornada laboral.</p>
+                <div class="alert">
+                    <i class="fa-solid fa-triangle-exclamation"></i><p>No te olvides de conectarte en Zoho.</p>
+                </div> 
+            </div>
+            <div class="conect">
+                <ul class="redes">
+                    <a href="#">
+                        <li>
+                            <img src="/assets/img/zoho.svg" alt="red">
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            <img src="/assets/img/crm.png" alt="red">
+                        </li>
+                    </a>
+        
+                </ul>
+
+
             </div>
         </div>
 
