--- a/index.html
+++ b/index.html
@@ -62,17 +62,8 @@
             </div>
             <div class="conect">
                 <ul class="redes">
-                    <a href="#">
-                        <li>
-                            <img src="/assets/img/zoho.svg" alt="red">
-                        </li>
-                    </a>
-                    <a href="#">
-                        <li>
-                            <img src="/assets/img/crm.png" alt="red">
-                        </li>
-                    </a>
-        
+                    <a href="#"><img src="/assets/img/zoho.svg" alt="red"></a>
+                    <a href="#"><img src="/assets/img/crm.png" alt="red"></a>
                 </ul>
 
 
