--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="left-menu">
                 <div class="logo">
                     <img src="/assets/img/icono-azulclaro.png" alt="logo">
-                    <span><a href="#">SAC</a></span>
+                    <span><a href="https://telecentro.com.ar/" target="_blank" rel="noopener" >SAC</a></span>
                 </div>
                 <ul>
                     <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-house"></i>
@@ -64,6 +64,7 @@
                 <ul class="redes">
                     <a href="#"><img src="/assets/img/zoho.svg" alt="red"></a>
                     <a href="#"><img src="/assets/img/crm.png" alt="red"></a>
+                    <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp"></i></a>
                 </ul>
 
 
