--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="main-container">
             <div class="left-menu">
                 <div class="logo">
-                    <img src="/assets/img/icono-azulclaro.png" alt="logo">
+                    <img src="./assets/img/icono-azulclaro.png" alt="logo">
                     <span><a href="https://telecentro.com.ar/" target="_blank" rel="noopener" >SAC</a></span>
                 </div>
                 <ul>
@@ -62,8 +62,8 @@
             </div>
             <div class="conect">
                 <ul class="redes">
-                    <a href="#"><img src="/assets/img/zoho.svg" alt="red"></a>
-                    <a href="#"><img src="/assets/img/crm.png" alt="red"></a>
+                    <a href="#"><img src="./assets/img/zoho.svg" alt="red"></a>
+                    <a href="#"><img src="./assets/img/crm.png" alt="red"></a>
                     <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp"></i></a>
                 </ul>
 
