--- a/pages/objetivos.html
+++ b/pages/objetivos.html
@@ -31,20 +31,20 @@
                 <span><a href="https://telecentro.com.ar/" target="_blank" rel="noopener">TELECENTRO</a></span>
             </div>
             <ul>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-house"></i>
+                <li class="sidebar-items"> <a class="sidebar-link" href="../index.html"><i class="fa-solid fa-house"></i>
                 </a>Inicio</li>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-toolbox"></i>
+                <li class="sidebar-items"> <a class="sidebar-link" href="../pages/herramientas.html"><i class="fa-solid fa-toolbox"></i>
                 </a>Herramientas</li>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-gift"></i>
+                <li class="sidebar-items"> <a class="sidebar-link" href="../pages/promociones.html"><i class="fa-solid fa-gift"></i>
                 </a>Promociones</li>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-chart-line"></i>
+                <li class="sidebar-items"> <a class="sidebar-link" href="../pages/calidad.html"><i class="fa-solid fa-chart-line"></i>
                 </a>Calidad</li>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-headset"></i>
+                <li class="sidebar-items"> <a class="sidebar-link" href="../pages/objetivos.html"><i class="fa-solid fa-headset"></i>
                 </a>Objetivos</li>
-                <li class="sidebar-items"> <a class="sidebar-link" href="#"><i class="fa-solid fa-book"></i>
+                <li class="sidebar-items"> <a class="sidebar-link" href="../pages/informacion.html"><i class="fa-solid fa-book"></i>
                 </a> Información</li>
                 <li class="sidebar-items" id="settings"> <a class="sidebar-link" href="#"><i class="fa-solid fa-gear"></i>
-                </a>Configuración</li>
+                </a>Configuración</li>  
             </ul>
         </div>
         <!--Right content goes here-->
