--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
             <div class="conect">
                 <ul class="redes">
-                    <a href="#"><img src="./assets/img/zoho.svg" alt="red"></a>
-                    <a href="#"><img src="./assets/img/crm.png" alt="red"></a>
+                    <a href="https://people.zoho.com/accgroup/zp#home/dashboard"><img src="./assets/img/zoho.svg" alt="red"></a>
+                    <a href="http://crmext.telecentro.local//Cliente/ConsultaCliente/ConsCliente.aspx?SubMenu=4229 CRM"><img src="./assets/img/crm.png" alt="red"></a>
                     <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp"></i></a>
                 </ul>
             </div>
