--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -58,11 +58,12 @@
     
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne" _msthash="1028378" _msttexthash="466284"> Artículo de acordeón #1 </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne" _msthash="1028378" _msttexthash="466284"> Promo HD </button>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                 <div class="accordion-body">
-                    <font _mstmutation="1" _msthash="935922" _msttexthash="136383949"><strong _mstmutation="1" _istranslated="1">Este es el cuerpo de acordeón del primer elemento.</strong> Se muestra por defecto, hasta que el plugin collapse añade las clases adecuadas que usamos para dar estilo a cada elemento. Estas clases controlan la apariencia general, así como la visualización y ocultación a través de transiciones CSS. Puede modificar cualquiera de esto con CSS personalizado o anulando nuestras variables predeterminadas. También vale la pena señalar que casi cualquier HTML puede ir dentro del , aunque la transición limita el desbordamiento. </font><code>.accordion-body</code></div>
+                    <p>El pack de alta definición son 58 canales adicionales con una calidad de imagen y sonido mejorada. Desde nuestra área debemos resaltar la importancia de que el cliente siempre tenga una mejor experiencia, resaltando que sí adhiere al débito automático podríamos otorgarle esta bonificación que a su vez bonifica el costo del pack oro y la aplicación de T-play ( con la cual podrá avanzar, retroceder, grabar programación).</p>
+                </div>
                 </div>
             </div>
 
