views herramientas promociones

--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -50,6 +50,18 @@
         <!--Right content goes here-->
         <div class="right-content"></div>
     </div>
+    <!-- Contenido -->
+    <div class="content">
+        <div class="title-hero">
+            <h2>Calidad</h2>
+        </div>
+        <div class="text-hero">
+            <p>Para poder acceder, momentáneamente, a la herramienta de QA y ver/firmar sus monitoreos da click en el siguiente boton: <a href="http://10.230.50.206/QA/index.php/" class="button_link" target="_blank" rel="noopener">Ir a monitoreos</a> y te logueas. </p>
+            <p>Luego de abrir la sesión pegas en la URL el siguiente link y deberían aparecer tus monitoreos pendientes de firma:</p>
+            <p><strong> http://10.230.50.206/QA/index.php/Monitoreo/Consulta_monitoreo </strong></p>
+        </div>
+
+    </div>
 
 
     </main>   
