--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -50,6 +50,50 @@
         <!--Right content goes here-->
         <div class="right-content"></div>
     </div>
+    <!-- Contenido -->
+    <div class="content">
+        <div class="title-hero">
+            <h2>Herramientas</h2>
+        </div>
+        <div class="tools">
+            <div class="tools-item">
+                <i class="fa-solid fa-calculator"></i>
+                <div class="tools-title">
+                    <p>Calculadora <br> ajustes días s/s</p>
+                </div>
+            </div>
+            <div class="tools-item">
+                <i class="fa-solid fa-percent"></i>
+                <div class="tools-title">
+                    <p>Promedio <br> efectividad</p>
+                </div>
+            </div>
+            <div class="tools-item">
+                <i class="fa-solid fa-note-sticky"></i>
+                <div class="tools-title">
+                    <p>Block <br> de notas</p>
+                </div>
+            </div>
+            <div class="tools-item">
+                <i class="fa-solid fa-envelope"></i>
+                <div class="tools-title">
+                    <p>Email</p>
+                </div>
+            </div>
+            <div class="tools-item">
+                <a href=""></a><i class="fa-solid fa-house"></i>
+                <div class="tools-title">
+                    <p>Sucursales <br> rapientrega </p>
+                </div>
+            </div>
+            <div class="tools-item">
+                <i class="fa-solid fa-money-bill-1"></i>
+                <div class="tools-title">
+                    <p>Sucursales <br> Reintegros </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     </main>   
