--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -93,8 +93,35 @@
                 </div>
             </div>
         </div>
+    
+    <div class="container">
+        <div class="calculadora">
+            <div class="display">
+                <div class="valor-anterior"></div>
+                <div class="valor-actual"></div>
+            </div>
+            <button class="col-2">C</button>
+            <button class="numero">&larr;</button>
+            <button class="numero">%</button>
+            <button class="numero">7</button>
+            <button class="numero">8</button>
+            <button class="numero">9</button>
+            <button class="operador">X</button>
+            <button class="numero">4</button>
+            <button class="numero">5</button>
+            <button class="numero">6</button>
+            <button class="operador">-</button>
+            <button class="numero">1</button>
+            <button class="numero">2</button>
+            <button class="numero">3</button>
+            <button class="operador">+</button>
+            <button class="col-2 numero">0</button>
+            <button class="numero">.</button>
+            <button class="operador">=</button>
+        </div>
     </div>
-
+    
+    </div> <!-- termina el contenido -->
 
     </main>   
 </body>
