--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -95,12 +95,15 @@
         </div>
     
     <div class="container">
+        <div class="title-hero">
+            <h2>Calculadora</h2>
+        </div>
         <div class="calculadora">
             <div class="display">
-                <div class="valor-anterior"></div>
-                <div class="valor-actual"></div>
+                <div class="valor-anterior">32 +</div>
+                <div class="valor-actual">4</div>
             </div>
-            <button class="col-2">C</button>
+            <button class="colum-2">C</button>
             <button class="numero">&larr;</button>
             <button class="numero">%</button>
             <button class="numero">7</button>
@@ -115,7 +118,7 @@
             <button class="numero">2</button>
             <button class="numero">3</button>
             <button class="operador">+</button>
-            <button class="col-2 numero">0</button>
+            <button class="colum-2 numero">0</button>
             <button class="numero">.</button>
             <button class="operador">=</button>
         </div>
