--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <!-- Content -->
-<body>
+<body style="overflow-x: hidden;">
     <main>
         <!-- Menú -->
         <div class="main-container">
