--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -21,7 +21,7 @@
 </head>
 
 <!-- Content -->
-<body>
+<body style="overflow-x: hidden;">
     <main>
     <!-- Menú -->
     <div class="main-container">
@@ -56,11 +56,10 @@
             <h2>Calidad</h2>
         </div>
         <div class="text-hero">
-            <p>Para poder acceder, momentáneamente, a la herramienta de QA y ver/firmar sus monitoreos da click en el siguiente boton: <a href="http://10.230.50.206/QA/index.php/" class="button_link" target="_blank" rel="noopener">Ir a monitoreos</a> y te logueas. </p>
+            <p>Para poder acceder, momentáneamente, a la herramienta de QA y ver/firmar sus monitoreos da click en el siguiente boton: <br><a href="http://10.230.50.206/QA/index.php/" class="button_link" target="_blank" rel="noopener">Ir a monitoreos</a> y te logueas. </p>
             <p>Luego de abrir la sesión pegas en la URL el siguiente link y deberían aparecer tus monitoreos pendientes de firma:</p>
             <p><strong> http://10.230.50.206/QA/index.php/Monitoreo/Consulta_monitoreo </strong></p>
         </div>
-
     </div>
 
 
