--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/e915ed1876.js" crossorigin="anonymous"></script>
+    <script src=""></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
@@ -103,24 +104,24 @@
                 <div class="valor-anterior">32 +</div>
                 <div class="valor-actual">4</div>
             </div>
-            <button class="colum-2">C</button>
-            <button class="numero">&larr;</button>
-            <button class="numero">%</button>
-            <button class="numero">7</button>
-            <button class="numero">8</button>
-            <button class="numero">9</button>
-            <button class="operador">X</button>
-            <button class="numero">4</button>
-            <button class="numero">5</button>
-            <button class="numero">6</button>
-            <button class="operador">-</button>
-            <button class="numero">1</button>
-            <button class="numero">2</button>
-            <button class="numero">3</button>
-            <button class="operador">+</button>
-            <button class="colum-2 numero">0</button>
-            <button class="numero">.</button>
-            <button class="operador">=</button>
+            <button class="colum-2 dif">C</button>
+            <button class="numero dif">&larr;</button>
+            <button class="numero dif">%</button>
+            <button class="numero dif">7</button>
+            <button class="numero dif">8</button>
+            <button class="numero dif">9</button>
+            <button class="operador dif">X</button>
+            <button class="numero dif">4</button>
+            <button class="numero dif">5</button>
+            <button class="numero dif">6</button>
+            <button class="operador dif">-</button>
+            <button class="numero dif">1</button>
+            <button class="numero dif">2</button>
+            <button class="numero dif">3</button>
+            <button class="operador dif">+</button>
+            <button class="colum-2 numero dif">0</button>
+            <button class="numero dif">.</button>
+            <button class="operador dif">=</button>
         </div>
     </div>
     
