--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/e915ed1876.js" crossorigin="anonymous"></script>
-    <script src=""></script>
+    <script src="../js/calculadora.js" type="text/javascript"></script>
+    <script src="../js/main.js" type="text/javascript" defer></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
@@ -101,8 +102,8 @@
         </div>
         <div class="calculadora">
             <div class="display">
-                <div class="valor-anterior">32 +</div>
-                <div class="valor-actual">4</div>
+                <div class="valor-anterior"></div>
+                <div class="valor-actual"></div>
             </div>
             <button class="colum-2 dif">C</button>
             <button class="numero dif">&larr;</button>
