--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/e915ed1876.js" crossorigin="anonymous"></script>
+    <script src="../js/display.js" type="text/javascript"></script>
     <script src="../js/calculadora.js" type="text/javascript"></script>
     <script src="../js/main.js" type="text/javascript" defer></script>
 
@@ -111,7 +112,7 @@
             <button class="numero dif">7</button>
             <button class="numero dif">8</button>
             <button class="numero dif">9</button>
-            <button class="operador dif">X</button>
+            <button class="operador dif">*</button>
             <button class="numero dif">4</button>
             <button class="numero dif">5</button>
             <button class="numero dif">6</button>
