page reclamos administrativos

--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -87,7 +87,7 @@
                     </h2>
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree" _msthidden="1">
                     <div class="accordion-body" _msthidden="1">
-                        <p>Volvimos con la promoción de 150M <strong>para clientes únicamente con el servicio de internet + telefonía o solo internet, el precio final es de $2,299 con tarjeta y $2,599 en efectivo y su vigencia es por 6 meses.</strong> Para esto podremos realizar el upgrade/downgrade de ser necesario  y cargamos el RA-Cambio de plan/categoría y en descripción colocamos ID BA  N 9130 150M. Dejamos nuestro registro en CRM como retención con producto. </p>
+                        <p>Volvimos con la promoción de 150M <strong>para clientes únicamente con el servicio de internet + telefonía o solo internet, el precio final es de $2,299 con tarjeta y $2,599 en efectivo y su vigencia es por 6 meses.</strong> Para esto podremos realizar el upgrade/downgrade de ser necesario, nos dirigimos al modulo de ventas -> cambio de planes y colocamos plan N 9130  -> 150M. Dejamos nuestro registro en CRM como retención con producto. </p>
                     </div>
                     </div>
                 </div>
