--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sac</title>
     <!-- Css -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- Tipografías  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/e915ed1876.js" crossorigin="anonymous"></script>
-
+  
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
@@ -28,7 +28,7 @@
         <div class="main-container">
             <div class="left-menu">
                 <div class="logo">
-                    <img src="./assets/img/icono-azulclaro.png" alt="logo">
+                    <img src="../assets/img/icono-azulclaro.png" alt="logo">
                     <span><a href="https://telecentro.com.ar/" target="_blank" rel="noopener">TELECENTRO</a></span>
                 </div>
                 <ul>
@@ -51,33 +51,45 @@
             <!--Right content goes here-->
             <div class="right-content"></div>
         </div>
-
-        <!-- Contenido -->
-        <div class="content">
+        <div class="container">
             <div class="title-hero">
-                <h1>Fidelización y Retención</h1>
+                <h2>Calculadora</h2>
             </div>
-            <div class="text-hero">
-                <p>Bienvenidos al área de fidelización y retención, esta herramienta se creó para facilitarles el acceso a la información actualizada (novedades de productos, promociones, mejoras de calidad...) y a todas las herramientas que utilizaremos durante nuestra jornada laboral.</p>
-                <div class="alert">
-                    <i class="fa-solid fa-triangle-exclamation"></i><p>No te olvides de conectarte en Zoho.</p>
-                </div> 
-            </div>
-            <div class="conect">
-                <ul class="redes">
-                    <a href="https://people.zoho.com/accgroup/zp#home/dashboard"><img src="./assets/img/zoho.svg" alt="red"></a>
-                    <a href="http://crmext.telecentro.local//Cliente/ConsultaCliente/ConsCliente.aspx?SubMenu=4229 CRM"><img src="./assets/img/crm.png" alt="red"></a>
-                    <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp"></i></a>
-                </ul>
+            <div class="calculadora">
+                <div class="display">
+                    <div class="valor-anterior"></div>
+                    <div class="valor-actual"></div>
+                </div>
+                <button class="colum-2 dif">C</button>
+                <button class="numero dif">&larr;</button>
+                <button class="numero dif">%</button>
+                <button class="numero dif">7</button>
+                <button class="numero dif">8</button>
+                <button class="numero dif">9</button>
+                <button class="operador dif">*</button>
+                <button class="numero dif">4</button>
+                <button class="numero dif">5</button>
+                <button class="numero dif">6</button>
+                <button class="operador dif">-</button>
+                <button class="numero dif">1</button>
+                <button class="numero dif">2</button>
+                <button class="numero dif">3</button>
+                <button class="operador dif">+</button>
+                <button class="colum-2 numero dif">0</button>
+                <button class="numero dif">.</button>
+                <button class="operador dif">=</button>
             </div>
         </div>
-    </main>      
+    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<!-- Footer -->
+<script src="../js/Display.js" type="text/javascript"></script>
+<script src="../js/Calculadora.js" type="text/javascript"></script>
+<script src="../js/main.js" type="text/javascript" defer></script>
 <footer>
     <div class="footer">
         <small>&copy;2022 <b>JABA; Unity Desing</b> -Todos los derechos reservados.</small>
     </div>
 </footer>
-</html>
+
+
